stack/screego/deployment-screego.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: screego
  labels:
    app: screego
spec:
  replicas: 1
  selector:
    matchLabels:
      app: screego
  template:
    metadata:
      labels:
        app: screego
    spec:
      nodeSelector:
        dfl.mn/datacentre: digitalocean
      volumes:
      - name: screego
        configMap:
          name: screego
      containers:
        - name: screego
          image: screego/server:unstable
          volumeMounts:
          - name: screego
            mountPath: /screego_users
          ports:
          - containerPort: 5050
          - containerPort: 3478
